Fixed horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,11 @@ body {
     rgba(2, 0, 36, 1) 100%
   );
 }
+
+
+
+*{
+  margin: 0 !important;
+  padding: 0;
+  box-sizing: border-box
+}
